kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsock
  labels:
    name: wsock
spec:
  rules:
    - host: archi-exemple-wsock.kub.sspcloud.fr
      http:
        paths:
          - pathType: Prefix
            path: "/wsock"
            backend:
              service:
                name: wsock 
                port:
                  number: 80
          - pathType: Prefix
            path: "/backend"
            backend:
              service:
                name: backendwsock
                port:
                  number: 80
          - pathType: Prefix
            path: "/frontend"
            backend:
              service:
                name: frontendwsock 
                port:
                  number: 80
